Assert when enable Brush custom icon #54310

Closed
opened 2018-03-13 18:26:42 +01:00 by Antonio Vazquez · 9 comments

Blender Version
Broken: 51812fb502 (after 2.77 official release)
Worked: 51812fb502^

Short description of error
Assert when using custom icons for brushes.

Exact steps for others to reproduce the error

  • Open default scene
  • Change to weight paint mode
  • Change to Options tab
  • Enable custom icon and select a file from brushicon folder inside blender

Assert error.

BLI_assert failed: //source/blender/blenkernel/intern/icons.c:494, BKE_icon_id_ensure(), at '((((*p_prv)->icon_id) == (0)) || (((*p_prv)->icon_id) == (id->icon_id)))'

Full backtrace: P634

**Blender Version** Broken: 51812fb502 (after 2.77 official release) Worked: 51812fb502^ **Short description of error** Assert when using custom icons for brushes. **Exact steps for others to reproduce the error** - Open default scene - Change to weight paint mode - Change to Options tab - Enable custom icon and select a file from brushicon folder inside blender # Assert error. ``` BLI_assert failed: //source/blender/blenkernel/intern/icons.c:494, BKE_icon_id_ensure(), at '((((*p_prv)->icon_id) == (0)) || (((*p_prv)->icon_id) == (id->icon_id)))' ``` Full backtrace: [P634](https://archive.blender.org/developer/P634.txt)
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Author
Member

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Dalai Felinto self-assigned this 2018-03-13 18:36:45 +01:00

Confirmed on c99c45a1e3. Full debug backtrace: P634

Confirmed on c99c45a1e356. Full **debug** backtrace: [P634](https://archive.blender.org/developer/P634.txt)
Dalai Felinto removed their assignment 2018-03-16 14:31:23 +01:00
Bastien Montagne was assigned by Dalai Felinto 2018-03-16 14:31:23 +01:00

This happens in master actually, not only 2.8.

This happens in master actually, not only 2.8.

@mont29 I believe this was introduced in your 51812fb502 commit. I didn't bisect though it is more of a hunch.

@mont29 I believe this was introduced in your 51812fb502c0 commit. I didn't bisect though it is more of a hunch.

@mont29 confirmed the issue in your old commit. Maybe all you need is to remove the assert.
@antoniov I updated the report description to match more our standards. It may sound as if it is more work to report, but it saves tons of time for whoever has to look at it in the future.

@mont29 confirmed the issue in your old commit. Maybe all you need is to remove the assert. @antoniov I updated the report description to match more our standards. It may sound as if it is more work to report, but it saves tons of time for whoever has to look at it in the future.

the problem here is not with BKE_icon code, it’s with how Brush handles its previews… Not sure yet which is best solution, should probably just completely remove PreviewImage from them, they use own rather weird system, which at some point shall be moved to new generic PreviewImage one… :/

the problem here is not with BKE_icon code, it’s with how Brush handles its previews… Not sure yet which is best solution, should probably just completely remove PreviewImage from them, they use own rather weird system, which at some point shall be moved to new generic PreviewImage one… :/

This issue was referenced by 1a71d5ae85

This issue was referenced by 1a71d5ae85c8080705fc88188b6ef78aad29efdd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54310
No description provided.